--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ p {
   color: #FFFFFF;
   font-size: 16px;
 }
+
+li {
+  font-family: 'Work Sans';
+  color: #FFFFFF;
+  font-size: inherit;
+}
   
 h1 {
   font-family: 'M PLUS 1';
@@ -17,6 +23,13 @@ h2 {
   font-family: 'M PLUS 1';
   color: #FFFFFF;
   font-size: 24px;
+  line-height: 0.6;
+}
+
+h3 {
+  font-family: 'M PLUS 1';
+  color: #FFFFFF;
+  font-size: 18px;
   line-height: 0.6;
 }
 
